# sturdy-broccoli

./: .gitignore
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/aruco_msgs/: Marker.h  MarkerArray.h
devel/include/aruco_ros/: ArucoThresholdConfig.h
devel/include/controller_manager_msgs/: ControllerState.h  ControllerStatistics.h  ControllersStatistics.h  ListControllerTypesRequest.h  ListControllerTypesResponse.h  ListControllersRequest.h  ListControllersResponse.h  LoadControllerRequest.h  LoadControllerResponse.h  ReloadControllerLibrariesRequest.h  ReloadControllerLibrariesResponse.h  SwitchControllerRequest.h  SwitchControllerResponse.h  UnloadControllerRequest.h  UnloadControllerResponse.h
devel/include/diff_drive_controller/: WheelData.h
devel/include/pal_behaviour_msgs/: BehaviourArgument.h  BehaviourEventRequest.h  BehaviourEventResponse.h  BehaviourTaskAction.h  BehaviourTaskActionFeedback.h  BehaviourTaskActionGoal.h  BehaviourTaskActionResult.h  BehaviourTaskFeedback.h  BehaviourTaskGoal.h  BehaviourTaskResult.h  PresentationAction.h  PresentationActionFeedback.h  PresentationActionGoal.h  PresentationActionResult.h  PresentationFeedback.h  PresentationGoal.h  PresentationResult.h
devel/include/pal_common_msgs/: DisableAction.h  DisableActionFeedback.h  DisableActionGoal.h  DisableActionResult.h  DisableFeedback.h  DisableGoal.h  DisableResult.h  EmptyAction.h  EmptyActionFeedback.h  EmptyActionGoal.h  EmptyActionResult.h  EmptyFeedback.h  EmptyGoal.h  EmptyResult.h  JointCurrent.h
devel/include/pal_control_msgs/: ActuatorCurrentLimit.h  CurrentLimitRequest.h  CurrentLimitResponse.h  MotionManagerAction.h  MotionManagerActionFeedback.h  MotionManagerActionGoal.h  MotionManagerActionResult.h  MotionManagerFeedback.h  MotionManagerGoal.h  MotionManagerResult.h
devel/include/pal_detection_msgs/: AddTexturedObjectRequest.h  AddTexturedObjectResponse.h  Detection2d.h  Detections2d.h  FaceDetection.h  FaceDetections.h  LegDetections.h  PersonDetection.h  PersonDetections.h  RecognizedActions.h  RecognizerRequest.h  RecognizerResponse.h  RotatedDetection2d.h  SelectTexturedObjectRequest.h  SelectTexturedObjectResponse.h  SetDatabaseRequest.h  SetDatabaseResponse.h  StartEnrollmentRequest.h  StartEnrollmentResponse.h  StopEnrollmentRequest.h  StopEnrollmentResponse.h  TexturedObjectDetection.h  (+1 more)
src/: .rosinstall  setup.sh
src/aaron_cv_test/: CMakeLists.txt  package.xml
src/aaron_cv_test/src/: .camera_test.cpp.swp  camera_test.cpp
src/basics/: CMakeLists.txt  package.xml
(+836 files in other folders)
